--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "questionsservice",
   "version": "1.0.0",
   "description": "Questions and Answer Service for SDC",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
